--- a/index.html
+++ b/index.html
@@ -340,9 +340,14 @@
                 <span class="process-card__number">1</span>
               </div>
               <h3 class="process-card__title">Pierwszy Kontakt</h3>
-              <p class="process-card__desc process-card__desc--link">
+              <a
+                href="https://form.typeform.com/to/j2PdqNmU?typeform-source=iwona-kossmann.lovable.app"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="process-card__desc process-card__desc--link"
+              >
                 Wypełnij formularz kontaktowy
-              </p>
+              </a>
             </div>
 
             <div class="process-card">
@@ -717,7 +722,12 @@
           Zarezerwuj rozmowę poznawczą już dziś i zrób pierwszy krok w kierunku
           osiągnięcia swoich celów.
         </p>
-        <a href="#" class="cta-section__button">
+        <a
+          href="https://form.typeform.com/to/j2PdqNmU?typeform-source=iwona-kossmann.lovable.app"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="cta-section__button"
+        >
           <svg
             width="16"
             height="16"
