--- a/v2.html
+++ b/v2.html
@@ -54,7 +54,7 @@
           </p>
           <div class="hero__actions">
             <a
-              href="https://form.typeform.com/to/j2PdqNmU?typeform-source=iwona-kossmann.lovable.app"
+              href="https://forms.gle/CohtAwxWMPLHkk4v5"
               target="_blank"
               rel="noopener noreferrer"
               class="btn btn--primary"
@@ -121,7 +121,7 @@
           </svg>
           <div class="hero__image-frame">
             <img
-              src="../img/mentor.jpg"
+              src="/img/v2.jpg"
               alt="Iwona Kossmann — Mentor biznesowy"
               class="hero__photo"
               loading="eager"
@@ -382,7 +382,7 @@
               <h3 class="process__title">Pierwszy kontakt</h3>
               <p class="process__desc">
                 <a
-                  href="https://form.typeform.com/to/j2PdqNmU?typeform-source=iwona-kossmann.lovable.app"
+                  href="https://forms.gle/CohtAwxWMPLHkk4v5"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="process__link"
@@ -774,7 +774,7 @@
           osiągnięcia swoich celów.
         </p>
         <a
-          href="https://form.typeform.com/to/j2PdqNmU?typeform-source=iwona-kossmann.lovable.app"
+          href="https://forms.gle/CohtAwxWMPLHkk4v5"
           target="_blank"
           rel="noopener noreferrer"
           class="btn btn--cta"
@@ -847,7 +847,7 @@
       <div class="footer__container">
         <div class="footer__socials">
           <a
-            href="mailto:contact@mentor.com"
+            href="mailto:kontakt@iwonakossmann.pl"
             class="footer__icon"
             aria-label="Email"
           >
@@ -947,14 +947,16 @@
         </div>
 
         <div class="footer__contact">
-          <p class="footer__email">contact@mentor.com</p>
+          <a href="mailto:kontakt@iwonakossmann.pl" class="footer__email"
+            >kontakt@iwonakossmann.pl</a
+          >
           <p class="footer__availability">
             Dostępna dla konsultacji na całym świecie
           </p>
         </div>
 
         <p class="footer__copy">
-          &copy; 2026 Professional Mentor. Wszelkie prawa zastrzeżone.
+          &copy; 2026 Iwona Kossmann. Wszelkie prawa zastrzeżone.
         </p>
 
         <div class="ornament">
@@ -1022,13 +1024,13 @@
             </li>
             <li>
               Proces zbierania danych realizowany jest przy użyciu narzędzia
-              Typeform (typeform.com). Informacje dotyczące sposobu
+              Google Forms (google.com). Informacje dotyczące sposobu
               przetwarzania i zabezpieczania danych są dostępne pod adresem:
               <a
-                href="https://help.typeform.com/hc/en-us/articles/360029581691-What-happens-to-my-data"
+                href="https://policies.google.com/privacy?hl=en-gb"
                 target="_blank"
                 rel="noopener"
-                >help.typeform.com</a
+                >policies.google.com</a
               >.
             </li>
             <li>
