small src path change

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </svg>
           <div class="hero__image-frame">
             <img
-              src="/img/v1.jpg"
+              src="img/v1.jpg"
               alt="Iwona Kossmann — Mentor biznesowy"
               class="hero__photo"
               loading="eager"
