--- a/v2.html
+++ b/v2.html
@@ -121,7 +121,7 @@
           </svg>
           <div class="hero__image-frame">
             <img
-              src="/img/v2.jpg"
+              src="img/v2.jpg"
               alt="Iwona Kossmann — Mentor biznesowy"
               class="hero__photo"
               loading="eager"
