--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>
     </nav>
 
+    <main>
     <!-- HERO -->
     <section class="hero" id="hero">
       <div class="hero__deco-line hero__deco-line--top"></div>
@@ -195,7 +196,7 @@
           <span class="stats__number" data-count="20">0</span>
           <span class="stats__suffix">+</span>
           <p class="stats__label">
-            Lat doświadczeni<br />
+            Lat doświadczenia<br />
             w zarządach (COO, CEO)
           </p>
         </div>
@@ -742,53 +743,53 @@
         <div class="awards__list" data-animate="fade-up">
           <div class="award">
             <div class="award__info">
-              <h4 class="award__title">Ranking Wpływowych Liderek Biznesu</h4>
+              <h3 class="award__title">Ranking Wpływowych Liderek Biznesu</h3>
               <p class="award__org">Gazeta Finansowa</p>
             </div>
             <span class="award__years">2025, 2024, 2023, 2022, 2021</span>
           </div>
           <div class="award">
             <div class="award__info">
-              <h4 class="award__title">Manager Roku</h4>
+              <h3 class="award__title">Manager Roku</h3>
               <p class="award__org">Home &amp; Market Magazine</p>
             </div>
             <span class="award__years">2024, 2023, 2022, 2021</span>
           </div>
           <div class="award">
             <div class="award__info">
-              <h4 class="award__title">
+              <h3 class="award__title">
                 Medal Ministra Gospodarki RP za Osiągnięcia na rzecz rozwoju
                 polskiej gospodarki
-              </h4>
+              </h3>
               <p class="award__org">Ministerstwo Gospodarki RP</p>
             </div>
             <span class="award__years">2015</span>
           </div>
           <div class="award">
             <div class="award__info">
-              <h4 class="award__title">
+              <h3 class="award__title">
                 Statuetka od Ministra Gospodarki RP dla najlepszej polskiej mark
-              </h4>
+              </h3>
             </div>
             <span class="award__years">2015</span>
           </div>
           <div class="award">
             <div class="award__info">
-              <h4 class="award__title">Prestiżowa Marka Modowa Roku</h4>
+              <h3 class="award__title">Prestiżowa Marka Modowa Roku</h3>
               <p class="award__org">Excellent Events</p>
             </div>
             <span class="award__years">2014</span>
           </div>
           <div class="award">
             <div class="award__info">
-              <h4 class="award__title">Manager Dekady</h4>
+              <h3 class="award__title">Manager Dekady</h3>
               <p class="award__org">Mobile Marketing Magazine</p>
             </div>
             <span class="award__years">2008</span>
           </div>
           <div class="award">
             <div class="award__info">
-              <h4 class="award__title">Marketer Roku</h4>
+              <h3 class="award__title">Marketer Roku</h3>
               <p class="award__org">Media i Marketing</p>
             </div>
             <span class="award__years">2006, 2007</span>
@@ -884,6 +885,8 @@
         </a>
       </div>
     </section>
+
+    </main>
 
     <!-- FOOTER -->
     <footer class="footer">
