--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
       button{font:inherit;cursor:pointer;border:none;background:none;}
       ul,ol{list-style:none;}
     </style>
-    <link
-      rel="preload"
-      href="css/style.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript><link rel="stylesheet" href="css/style.css" /></noscript>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- NAVBAR -->
