--- a/v2.html
+++ b/v2.html
@@ -53,7 +53,7 @@
       button{font:inherit;cursor:pointer;border:none;background:none;}
       ul,ol{list-style:none;}
     </style>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-2.css" />
   </head>
   <body>
     <!-- NAVBAR -->
@@ -161,7 +161,7 @@
             </svg>
             <div class="hero__image-frame">
               <img
-                src="img/v2.jpg"
+                src="img/v2-2.jpg"
                 alt="Iwona Kossmann — Mentor biznesowy"
                 class="hero__photo"
                 loading="eager"
