--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       button{font:inherit;cursor:pointer;border:none;background:none;}
       ul,ol{list-style:none;}
     </style>
-    <link rel="stylesheet" href="css/style-2.css" />
+    <link rel="stylesheet" href="css/style-3.css" />
   </head>
   <body>
     <!-- NAVBAR -->
@@ -161,7 +161,7 @@
             </svg>
             <div class="hero__image-frame">
               <img
-                src="img/v1-2.jpg"
+                src="img/Iwona-Kossmann.jpg"
                 alt="Iwona Kossmann — Mentor biznesowy"
                 class="hero__photo"
                 loading="eager"
@@ -235,7 +235,7 @@
           <div class="about__visual" data-animate="fade-left">
             <div class="about__photo-wrap">
               <img
-                src="img/cytat-v1.jpg"
+                src="img/Iwona-Kossmann-2.jpg"
                 alt="Iwona Kossmann — portret, mentor biznesowy"
                 class="about__photo"
                 width="320"
